force-app/main/default/objects/ASYMBL_Time__Time_Entry__c/ASYMBL_Time__Time_Entry__c.object-meta.xml
<CustomObject>
    <label>Time Entry</label>
    <nameField>
        <displayFormat>TSE-{000000}</displayFormat>
        <label>Time Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>