force-app/main/default/objects/ASYMBL_Time__Time_Entry__c/fields/ASYMBL_Time__AST_Sequence__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__AST_Sequence__c</fullName>
    <label>Sequence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>