force-app/main/default/objects/ASYMBL_Time__Time_Entry__c/fields/ASYMBL_Time__AST_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__AST_Unique_Key__c</fullName>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>