force-app/main/default/objects/ASYMBL_Time__Time_Entry__c/fields/ASYMBL_Time__Break__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Break__c</fullName>
    <label>Break</label>
    <length>255</length>
    <type>Text</type>
</CustomField>