force-app/main/default/objects/ASYMBL_Time__Time_Entry__c/fields/ASYMBL_Time__Candidate_Rate_Card_Detail__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Candidate_Rate_Card_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate Rate Card Detail</label>
    <referenceTo>ASYMBL_Time__Candidate_Rate_Card_Detail__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>