force-app/main/default/objects/ASYMBL_Time__Time_Entry__c/fields/ASYMBL_Time__Date__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>