force-app/main/default/objects/ASYMBL_Time__Time_Entry__c/fields/ASYMBL_Time__Description__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>