force-app/main/default/objects/ASYMBL_Time__Time_Entry__c/fields/ASYMBL_Time__Did_Not_Work__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Did_Not_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Did Not Work</label>
    <type>Checkbox</type>
</CustomField>