force-app/main/default/objects/ASYMBL_Time__Time_Entry__c/fields/ASYMBL_Time__Double_Time_Billable_Amount__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Double_Time_Billable_Amount__c</fullName>
    <label>Double Time Billable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>