force-app/main/default/objects/ASYMBL_Time__Time_Entry__c/fields/ASYMBL_Time__Is_Entry_Update_from_UI__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Is_Entry_Update_from_UI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Entry Update from UI</label>
    <type>Checkbox</type>
</CustomField>