force-app/main/default/objects/ASYMBL_Time__Time_Entry__c/fields/ASYMBL_Time__Is_Holiday_Entry__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Is_Holiday_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Holiday Entry</label>
    <type>Checkbox</type>
</CustomField>