force-app/main/default/objects/ASYMBL_Time__Time_Entry__c/fields/ASYMBL_Time__Number_of_Days_Worked__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Number_of_Days_Worked__c</fullName>
    <label>Number of Days Worked</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>