force-app/main/default/objects/ASYMBL_Time__Time_Entry__c/fields/ASYMBL_Time__Overtime_Hours__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Overtime_Hours__c</fullName>
    <label>Overtime Hours</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>