force-app/main/default/objects/ASYMBL_Time__Time_Entry__c/fields/ASYMBL_Time__Overtime_Pay__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Overtime_Pay__c</fullName>
    <label>Overtime Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>