force-app/main/default/objects/ASYMBL_Time__Time_Entry__c/fields/ASYMBL_Time__Secondary_End_Time__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Secondary_End_Time__c</fullName>
    <label>Secondary End Time</label>
    <type>Time</type>
</CustomField>