force-app/main/default/objects/ASYMBL_Time__Time_Entry__c/fields/ASYMBL_Time__Timesheet__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Timesheet__c</fullName>
    <label>Timesheet</label>
    <referenceTo>ASYMBL_Time__Timesheet__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>