force-app/main/default/objects/ASYMBL_Time__Time_Entry__c/fields/ASYMBL_Time__Total_Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Total_Hours_Worked__c</fullName>
    <label>Total Hours Worked</label>
    <length>255</length>
    <type>Text</type>
</CustomField>