force-app/main/default/objects/ASYMBL_Time__Time_Entry__c/fields/ASYMBL_Time__Total_Units_Worked__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Total_Units_Worked__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Units Worked</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>