force-app/main/default/objects/ASYMBL_Time__Time_Entry__c/fields/ASYMBL_Time__Worked_on_this_Day__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Worked_on_this_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Worked on this Day</label>
    <type>Checkbox</type>
</CustomField>