force-app/main/default/objects/ASYMBL_Time__Time_Entry__c/fields/Custom_Field_1__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_1__c</fullName>
    <description>Client-specific custom field 1 - configurable via Billing Profile labels</description>
    <label>Custom Field 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>