force-app/main/default/objects/ASYMBL_Time__Time_Entry__c/fields/Custom_Field_3__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_3__c</fullName>
    <description>Client-specific custom field 3 - configurable via Billing Profile labels</description>
    <label>Custom Field 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>